# sortingAlgorithms

./: .gitignore  CMakeLists.txt  CoZROBIC.txt  PROJEKT_SORTOWANIE.cbp  PROJEKT_SORTOWANIE.layout  README.md
Headers/: Algorithm.h  App.h  Heapsort.h  Insertionsort.h  Menu.h  PreSort.h  Print.h  Quicksort.h  Shellsort.h  Utilities.h
Sources/: Algorithm.cpp  App.cpp  Heapsort.cpp  Insertionsort.cpp  Menu.cpp  PreSort.cpp  Print.cpp  Quicksort.cpp  Shellsort.cpp  Utilities.cpp  main.cpp
TESTING/Headers2/: Przyjaciele.h  event.h  pytanie.h
TESTING/Sources2/: Przyjaciele.cpp  WSKAZNIKI.cpp  event.cpp  polimorfizm.cpp  pytanie.cpp  quiz.txt  xdd.cpp
